testsuite/tests/properties/invalid_arg_name_override/test.out
== foo.lkt ==
foo.lkt:13:5: error: Argument #1 does not have the same name here (b) as in base property (a)
13 |     fun prop(b: Bool): Bool = b
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
